# Drone-perching

./: README.md  goPos.py  imgPulisher.py
camera_simulator/: CMakeLists.txt  package.xml
cylinder_detection/: CMakeLists.txt  package.xml
cylinder_detection/include/cylinder_detection/: imgproc.h
cylinder_detection/src/: cylinder_detection.cpp  imgproc.cpp  parameter.yaml
cylinder_msgs/: CMakeLists.txt  package.xml
process_image_features/: CMakeLists.txt  package.xml
process_image_features/src/: filter.cpp  process_image_features.cpp
state_control_cylinder/: CMakeLists.txt  package.xml
