<?xml version="1.0"?>
<package format="2">
  <name>process_image_features</name>
  <version>0.0.0</version>
  <description>The process_image_features package</description>


  <maintainer email="saumil@todo.todo">saumil</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cylinder_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>lapack</build_depend>
  
  <build_export_depend>cylinder_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>cylinder_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>lapack</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
